...
    <string name="hint_email">Your email</string>
    <string name="hint_message">Your message</string>

    <string name="btn_send">Send</string>

    <string name="err_msg_name">Enter your name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_message">Enter the message</string>

    <string name="hint_search">Search Restaurant</string>


    <string name="place_feedback_feeling">How are you feeling?</string>
...
